--- a/.code/UpdateMA30287.ipynb
+++ b/.code/UpdateMA30287.ipynb
@@ -25,7 +25,7 @@
    "execution_count": 1,
    "metadata": {
     "deletable": false,
-    "editable": false,
+    "editable":true,
     "vscode": {
      "languageId": "plaintext"
     }
@@ -46,7 +46,7 @@
    ],
    "source": [
     "!rm -rf ${HOME}/ma30287-codes\n",
-    "!git clone git@github.com:trinh/ma30287-codes.git ${HOME}/ma30287-codes"
+    "!git clone https://github.com/trinh/ma30287-codes.git  ${HOME}/ma30287-codes"
    ]
   },
   {
