--- a/.code/UpdateMA30287.ipynb
+++ b/.code/UpdateMA30287.ipynb
@@ -45,8 +45,8 @@
     }
    ],
    "source": [
-    "!rm -rf ${HOME}/ma30287-codes\n",
-    "!git clone https://github.com/trinh/ma30287-codes.git  ${HOME}/ma30287-codes"
+    "!rm -rf ${HOME}/ma30287.git\n",
+    "!git clone https://github.com/trinh/ma30287-codes.git  ${HOME}/ma30287.git"
    ]
   },
   {
