--- a/Welcome.ipynb
+++ b/Welcome.ipynb
@@ -16,7 +16,7 @@
     "## First time setup\n",
     "If you have not done so already, please follow the instructions the [First time setup notebook](FirstTimeSetup.ipynb) to set up the course environment on Noteable; this is only necessary the first time you log into the Noteable server for this course.\n",
     "\n",
-    "You should then read the rest of this notebook, which explains the organisation of the course material. Once you have done this, you can close this notebook, and go to the folders within **<i class=\"fa fa-folder\"></i> / ma30287-codes**, which contain materials that are written as the lectures proceed."
+    "You should then read the rest of this notebook, which explains the organisation of the course material. Once you have done this, you can close this notebook, and go to the folders within **<i class=\"fa fa-folder\"></i> / ma30287.git**, which contain materials that are written as the lectures proceed."
    ]
   },
   {
@@ -41,7 +41,7 @@
     "\n",
     "You can navigate to a different folder by clicking on it in the list. The name of the current folder is shown at the top. This looks something like this:\n",
     "\n",
-    "&ensp;&ensp;&ensp;&ensp;**<i class=\"fa fa-folder\"></i> / ma30287-codes / week01**\n",
+    "&ensp;&ensp;&ensp;&ensp;**<i class=\"fa fa-folder\"></i> / ma30287.git / week01**\n",
     "\n",
     "Here <i class=\"fa fa-folder\"></i> is the so-called *root* folder, i.e. the folder at the basis of your directory structure. Clicking on the special folder ''<i class=\"fa fa-folder-o\"></i> ..'' takes you back to the parent folder. The following figure shows an example:\n",
     "\n",
@@ -57,11 +57,11 @@
     "\n",
     "#### Lectures \n",
     "\n",
-    "* During the lectures, we will often initiate small scripts that will provide you with examples on how to code. These will be placed in subdirectories of the folder **<i class=\"fa fa-folder\"></i> / ma30287-codes**. The folder called ''week01'' will contain material for week 1 and so on. \n",
+    "* During the lectures, we will often initiate small scripts that will provide you with examples on how to code. These will be placed in subdirectories of the folder **<i class=\"fa fa-folder\"></i> / ma30287.git**. The folder called ''week01'' will contain material for week 1 and so on. \n",
     "\n",
-    "* Note that you can view and run notebooks in folders of **<i class=\"fa fa-folder\"></i> / ma30287-codes**, but **you should not save any work in <i class=\"fa fa-folder\"></i> / ma30287-codes or its subfolders that you would like to keep**. \n",
+    "* Note that you can view and run notebooks in folders of **<i class=\"fa fa-folder\"></i> / ma30287.git**, but **you should not save any work in <i class=\"fa fa-folder\"></i> / ma30287.git or its subfolders that you would like to keep**. \n",
     "\n",
-    "* The reason for this is that the material in this directory will be updated over the course of the semester; you can pull the latest content with the help of the [UpdateMA30287.ipynb](UpdateMA30287.ipynb) notebook in the root folder. This will overwrite all changes you might have made to files inside the **<i class=\"fa fa-folder\"></i> / ma30287-codes** and its subfolders.\n",
+    "* The reason for this is that the material in this directory will be updated over the course of the semester; you can pull the latest content with the help of the [UpdateMA30287.ipynb](UpdateMA30287.ipynb) notebook in the root folder. This will overwrite all changes you might have made to files inside the **<i class=\"fa fa-folder\"></i> / ma30287.git** and its subfolders.\n",
     "\n",
     "#### Your working directory\n",
     "\n",
