--- a/.code/UpdateMA30287.ipynb
+++ b/.code/UpdateMA30287.ipynb
@@ -25,7 +25,7 @@
    "execution_count": 1,
    "metadata": {
     "deletable": false,
-    "editable":true,
+    "editable": false,
     "vscode": {
      "languageId": "plaintext"
     }
@@ -35,18 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning into '/Users/hppt20/ma30287.git'...\n",
-      "remote: Enumerating objects: 17, done.\u001b[K\n",
-      "remote: Counting objects: 100% (17/17), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (16/16), done.\u001b[K\n",
-      "remote: Total 17 (delta 0), reused 17 (delta 0), pack-reused 0\u001b[K\n",
-      "Receiving objects: 100% (17/17), 303.16 KiB | 874.00 KiB/s, done.\n"
      ]
     }
    ],
    "source": [
     "!rm -rf ${HOME}/ma30287.git\n",
-    "!git clone https://github.com/trinh/ma30287-codes.git  ${HOME}/ma30287.git"
+    "!git clone https://github.com/trinh/ma30287-codes.git  ${HOME}/ma30287-codes.git"
    ]
   },
   {
