--- a/.code/UpdateMA30287.ipynb
+++ b/.code/UpdateMA30287.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "!rm -rf ${HOME}/ma30287.git\n",
+    "!rm -rf ${HOME}/ma30287-codes.git\n",
     "!git clone https://github.com/trinh/ma30287-codes.git  ${HOME}/ma30287-codes.git"
    ]
   },
