--- a/lectures/lecture19-LatitudeEBM-iceline.ipynb
+++ b/lectures/lecture19-LatitudeEBM-iceline.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "3c27f908-0ef6-4960-80bf-67184e1462e1",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "335b2fcc-7949-4e39-89b7-7614b3f28b0c",
    "metadata": {},
    "outputs": [
@@ -66,12 +66,12 @@
     "Tbar = lambda ys, Q: (Q*(1 - abar(ys)) - A)/B \n",
     "Tbari = lambda Q: (Q*(1 - ai)- A)/B\n",
     "Tbarw = lambda Q: (Q*(1 - aw)- A)/B\n",
-    "Qfunc = lambda ys: (Tc + A/B)*(B+k)/(s(ys)*(1 - (ai+aw)/2) + k/B*(1 - abar(ys)))"
+    "Kfunc = lambda ys: (Tc + A/B)*(B+k)/(s(ys)*(1 - (ai+aw)/2) + k/B*(1 - abar(ys)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1630b5f4-fea6-4c6e-b1f8-ec407a42bada",
    "metadata": {},
    "outputs": [
@@ -88,10 +88,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11f355850>]"
+       "[<matplotlib.lines.Line2D at 0x12f08bb50>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -109,7 +109,7 @@
    "source": [
     "# Solve for the ice line\n",
     "ys = np.linspace(0, 1, 100);\n",
-    "Qs = Qfunc(ys);\n",
+    "Qs = Kfunc(ys);\n",
     "plt.plot(Qs, ys, 'k')\n",
     "plt.plot([Q0, Q0], [0, 1], '--')\n",
     "plt.plot([Qmin, 550], [1, 1])\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "c9096078-01db-46af-b6c3-f9f5ed502320",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
     "plt.xlabel('Q')\n",
     "plt.ylabel('Mean temperature')\n",
     "plt.grid(1)\n",
-    "plt.savefig('Tbar_vs_Q.pdf')"
+    "# plt.savefig('Tbar_vs_Q.pdf')"
    ]
   },
   {
