--- a/lectures/ProblemClass03a-SolvingBVPs.ipynb
+++ b/lectures/ProblemClass03a-SolvingBVPs.ipynb
@@ -5,7 +5,7 @@
    "id": "e1195016-698f-42de-8ede-c7ae0df6c6eb",
    "metadata": {},
    "source": [
-    "# Lecture 12. Solving a singular boundary-value problem \n",
+    "# Problem class 3. Solving a singular boundary-value problem \n",
     "\n",
     "Boundary-value problems are much harder than initial-value problems. In this sheet, we will look to study a singular BVP using Python's `solve_bvp` script.  We will study:\n",
     "\\begin{gather}\n",
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
