--- a/lectures/Chapter20-ThreeTermChemicalReaction.ipynb
+++ b/lectures/Chapter20-ThreeTermChemicalReaction.ipynb
@@ -5,7 +5,7 @@
    "id": "48b0355f-86ab-43fd-bad5-ff2fdac23b3f",
    "metadata": {},
    "source": [
-    "# Lecture 25: Numerical solution of a fast-slow system with three equations"
+    "# Chapter 20: Fast-slow dynamics for a higher-order system"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
